--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header .navbar .middle{
 header .navbar .middle p{
     font-size: 20px;
     font-weight: 300;
-    cursor: pointer;r
+    cursor: pointer;
     letter-spacing: 2%;
 }
 .circle{
